# sample-amazon-quick-suite-knowledge-hub

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  hr_mcp_server.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  slack-contribution-post.md  utils.py
.github/: CODEOWNERS
.github/workflows/: deploy-pages.yml  link-checker.yml  quality-check.yml
docs/: HOW-TO-CONTRIBUTE.md  broadcast.md  index.md
docs/guidance/: how-to.md
docs/infrastructure as code/Terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/integration/: actions.md  knowledge-base.md
docs/integration/actions/2lo-servicenow-action-setup-guide/: README.md
docs/integration/actions/asana-action-setup-guide/: README.md
docs/manage quick/observability-agent/: README.md  app.py  pyproject.toml
docs/manage quick/observability-agent/cdk/: __init__.py  quicksuite_observability_mcp_stack.py
docs/manage quick/observability-agent/images/: README.md
docs/manage quick/observability-agent/tools/: quicksuite_observability_lambda.py  quicksuite_observability_tools.json
docs/use-cases/: index.md
docs/use-cases/actuarial-analysis-solution/: .gitignore  README.md  app.py
docs/use-cases/bedrock-kb-retrieval-mcp/: .gitignore  README.md  app.py
docs/use-cases/genai-operations-hub/: 0-setup.md  1-ai-dashboard.md  cleanup.sh
docs/use-cases/quick-chat-agent-embedding-demo/: README.md
docs/use-cases/redshift-data-query-mcp/: README.md  app.py
static/overrides/: main.html
static/stylesheets/: extra.css
(+79 files in other folders)
