[project]
name = "quicksuite-observability-agent-mcp"
version = "0.1.0"
description = "Amazon CloudWatch Observability MCP Integration with QuickSuite"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.172.0",
    "constructs>=10.0.0",
    "aws-cdk.aws-lambda-python-alpha>=2.172.0a0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cdk"]
